# 7ZipAndroid

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/pf/a7zipandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/lib7zr/armeabi/: 7zr
app/src/main/assets/lib7zr/armeabi-v7a/: 7zr
app/src/main/assets/lib7zr/x86/: 7zr
app/src/main/cpp/: native-lib.cpp  native-lib.h
app/src/main/cpp/lib7zr/CPP/ANDROID/7zr/jni/: Android.mk  Application.mk
app/src/main/java/com/pf/a7zipandroid/: CommandUtils.java  MainActivity.java  ZipCode.java  ZipHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/pf/a7zipandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
resources/: 7z压缩.pptx
